add_executable(can_sum can_sum.cpp)

add_executable(coin_change coin_change.cpp)

add_executable(grid_travel grid_travel.cpp)

add_executable(grid_travel_ways grid_travel_ways.cpp)

add_executable(knapsack knapsack.cpp)

add_executable(lcs lcs.cpp)

add_executable(lis lis.cpp)

add_executable(max_key_press maxkey_press.cpp)

add_executable(paint_house paint_house.cpp)

add_executable(palindrome palindrome.cpp)

add_executable(partition partition.cpp)

add_executable(steps steps.cpp)

add_executable(string_decode string_decode.cpp)

