add_executable(djikstra djikstra.cpp)

add_executable(mst mst.cpp)

add_executable(network_delay network_delay.cpp)

add_executable(top_sort top_sort.cpp)

add_executable(count_islands count_islands.cpp)

add_executable(open_the_lock open_the_lock.cpp)

add_executable(test_graph test_graph.cpp)

add_executable(dfs dfs.cpp)
add_executable(bfs bfs.cpp)
add_executable(prim prim.cpp)
